--- a/ETProject/ETProject-SPA/src/app/nav/nav.component.html
+++ b/ETProject/ETProject-SPA/src/app/nav/nav.component.html
@@ -1,32 +1,33 @@
-<nav class="navbar navbar-expand-md navbar-dark  bg-dark">
-  <a class="navbar-brand" href="#">Expense Tracker The Pay</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid" >
+    <a class="navbar-brand"[routerLink]="['/home']">Expense Tracker The Pay</a>
 
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Categories</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/categories']" >Categories</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Transactions</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/transactions']" >Transactions</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" tabindex="-1">Balance</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/balance']" tabindex="-1">Balance</a>
       </li>
     </ul>
     
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Welcome User!
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Hello {{authService.decodedToken?.unique_name | titlecase}}
       </a>
     
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Logout</a>
+      <div *dropdownMenu class="dropdown-menu mt-3">
+        <a class="dropdown-item" (click)="loggedOut()"><i class="fa fa-sign-out"></i> Logout</a>
       </div>
     </div>
 
     <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
       <input class="form-control mr-sm-2" type="text" name="userId" placeholder="User Name" required [(ngModel)]="model.userId">
       <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" required [(ngModel)]="model.password">
-      <button [disabled]="!loginForm.valid" class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+      <button [disabled]="!loginForm.valid" class="btn btn-secondary my-2 my-sm-00" type="submit">Login</button>
     </form>
-
-</nav>
+  </div> 
+ </nav>
