--- a/ETProject/ETProject-SPA/src/app/nav/nav.component.html
+++ b/ETProject/ETProject-SPA/src/app/nav/nav.component.html
@@ -7,7 +7,7 @@
         <a class="nav-link" [routerLink]="['/categories']" >Categories</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/transactions']" >Transactions</a>
+        <a class="nav-link" [routerLink]="['/transactions/:id']" >Transactions</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/balance']" tabindex="-1">Balance</a>
