--- a/ETProject/ETProject-SPA/src/app/balance/Egresos/egresos/egresos.component.html
+++ b/ETProject/ETProject-SPA/src/app/balance/Egresos/egresos/egresos.component.html
@@ -1,5 +1,37 @@
 <div class="container-fluid">
+  <div>
+    <h1>Egresos</h1>
+   
+  </div>
   <div class="row">
+
+    <br>
+    <div class="table-responsive-sm">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Description</th>
+            <th scope="col">Date</th>
+            <th scope="col">Total</th>
+            
+          </tr>
+          <tr *ngFor="let egr of transactions">
+            <td>{{egr.id}}</td>
+            <td>{{egr.description}}</td>
+            <td>{{egr.dateTransaction}}</td>
+            <td>{{egr.total}}</td>
+  
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+            <td>Total Ingresos: {{total}}</td>
+          </tr>
+        </tfoot>
+    
+      </table>
     
   </div>
+  
 </div>
