--- a/ETProject/ETProject-SPA/src/app/balance/balance.component.html
+++ b/ETProject/ETProject-SPA/src/app/balance/balance.component.html
@@ -1,10 +1,16 @@
-<div class="container-fluid">
+<div class="container-fluid form-group">
   <div class="row">
-    <div class="col-6">
+    <div class="col">
       <app-ingresos></app-ingresos>
     </div>
-    <div class="col-6">
+    <div class="col">
       <app-egresos></app-egresos>
     </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <label class="control-labe ml-2">Balance Final: <strong>{{balance}}</strong></label>
+    </div>
+    
   </div>
 </div>
