--- a/ETProject/ETProject-SPA/src/app/categories/categories.component.html
+++ b/ETProject/ETProject-SPA/src/app/categories/categories.component.html
@@ -1,30 +1,38 @@
 <div class="container-fluid">
   <h1 >List of Categories</h1>
   <button type="button" class="btn btn-success" (click)="onAddRecipe()">Add Category</button>
-  <div class="table-responsive-sm">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Description</th>
-          <th scope="col">Type</th>
-          <th scope="col">Action</th>
-          
-        </tr>
-        <tr *ngFor="let cat of categories">
-          <td>{{cat.id}}</td>
-          <td>{{cat.description}}</td>
-          <td>{{cat.type}}</td>
-          <td>
-            <button type="button" class="btn btn-primary disabled mr-2" (click)="onEditRecipe(cat.id)">Update</button>
-            <button type="button" class="btn btn-danger disabled" (click)="onDelete(cat.id)">Delete</button>
-          </td>
-
-        </tr>
-      </thead>
-  
-    </table>
-
+  <div class="row">
+    <div class="col-12">
+      <div class="table-responsive-sm">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Id</th>
+              <th scope="col">Description</th>
+              <th scope="col">Type</th>
+              <th scope="col">Action</th>
+              
+            </tr>
+            <tr *ngFor="let cat of categoriesReturn">
+              <td>{{cat.id}}</td>
+              <td>{{cat.description}}</td>
+              <td>{{cat.type}}</td>
+              <td>
+                <button type="button" class="btn btn-primary disabled mr-2" (click)="onEditRecipe(cat.id)">Update</button>
+                <button type="button" class="btn btn-danger disabled" (click)="onDelete(cat.id)">Delete</button>
+              </td>
+    
+            </tr>
+          </thead>
+      
+        </table>
+        <pagination [totalItems]="this.countCategories" (pageChanged)="pageChanged($event)"></pagination>
+    
+    
+      </div>
+      
+    </div>
   </div>
+
 
 </div>
