--- a/ETProject/ETProject-SPA/src/app/categories/category/category.component.html
+++ b/ETProject/ETProject-SPA/src/app/categories/category/category.component.html
@@ -34,7 +34,7 @@
             type="submit"
             class="btn btn-success mr-2"
             [disabled]="!categoryForm.valid">Save</button>
-          <button type="button" class="btn btn-danger mr-2" (click)="onCancel()">Cancel</button>
+          <button type="button" class="btn btn-info mr-2" (click)="onCancel()">Cancel</button>
           <button *ngIf = 'category.id === 0'  type="button" class="btn btn-danger mr-2" (click)="onReset()">Clean</button>
         </div>
       </div>
