--- a/ETProject/ETProject-SPA/src/app/categories/categories.component.html
+++ b/ETProject/ETProject-SPA/src/app/categories/categories.component.html
@@ -26,7 +26,7 @@
           </thead>
       
         </table>
-        <pagination [totalItems]="this.countCategories" (pageChanged)="pageChanged($event)"></pagination>
+        <pagination [itemsPerPage]="5"[totalItems]="this.countCategories" (pageChanged)="pageChanged($event)"></pagination>
     
     
       </div>
